inprogress/hello-springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-deployment
  labels:
    app: hello-spring-boot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-spring-boot
  template:
    metadata:
      labels:
        app: hello-spring-boot
    spec:
      containers:
      - name: spring-boot-example
        image: bjlin888/eyesmedia-springboot-sample:1.0.0
        ports:
        - containerPort: 10000
          name: spring-boot-svc
        readinessProbe:
          httpGet:
            path: /sample/actuator/health
            port: spring-boot-svc
          initialDelaySeconds: 60
          timeoutSeconds: 10
          periodSeconds: 3
          failureThreshold: 2
        livenessProbe:
          httpGet:
            path: /sample/actuator/health
            port: spring-boot-svc
          initialDelaySeconds: 120
          timeoutSeconds: 2
          periodSeconds: 8
          failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata: 
  name: spring-boot-service
spec:
  selector:
    app: hello-spring-boot
  ports:
    - protocol: TCP
      port: 9091
      targetPort: spring-boot-svc
